--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/hotel
-spring.datasource.username=postgres
+spring.datasource.username=manyeka
 spring.datasource.password=manyeka123
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql=true
