--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,14 @@ spring.servlet.multipart.max-request-size=200000MB
 spring.servlet.multipart.file-size-threshold= 300MB
 spring.servlet.multipart.max-file-size=20000MB
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth =true
+spring.mail.properties.mail.smtp.starttls.enable =true
+
+
+
 
 
